--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,20 @@ h1 {
     font-size: 100%;
     text-align: center;
 }
+img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 450px;
+
+
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+body {
+    background: linear-gradient(to right, royalblue, skyblue);
+}
