--- a/different styles.css
+++ b/different styles.css
@@ -15,3 +15,10 @@ font-family:'Times New Roman', Times, serif;
 font-size: 200%;
 text-align: center;
 }
+h2 {
+color: black;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-size: 100%;
+text-align: center;
+
+}
