--- a/home.css
+++ b/home.css
@@ -21,3 +21,9 @@ img {
 body {
     background: linear-gradient(to right, royalblue, skyblue);
 }
+p {
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 100%;
+    text-align: center;
+}
